--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -7,6 +7,7 @@ body {
   background-size: cover;
   padding: 0 5vw;
   min-height: 100vh;
+  
 }
 .nav-default {
     background: white;
@@ -29,17 +30,22 @@ p {
 }
 .main-container {
     padding-top:50px;
+    
+    
 }
 .about-me h1 {
     font-size:30px;
+    
 }
 .about-me h2 {
     font-size:20px;
 }
 .about-me h3 {
     font-size:18px;
-
-   width: 90%;
+    text-align: left;
+    width: 80%;
+    text-align: justify;
+  
 }
 .bottom-cta {
     background: white;
@@ -88,6 +94,7 @@ p {
 .work-item-row {
     /*padding: 10% 0;*/
     margin-bottom:100px;
+
 }
 .row-tools {
   padding: 50px 0;
@@ -114,6 +121,7 @@ width:100%;
     font-weight: 800;
     font-family: 'Open Sans', sans-serif;
 }
+
 .btn-launch:hover,
 .btn-launch:focus {
     color: white;
@@ -145,11 +153,15 @@ width:100%;
     background-color: transparent;
     border: 1px solid #000;
     padding: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
     margin-left: 5px;
     margin-right: 5px;
+
     margin-top: 5px;
     margin-top: 5px;
 }
+
 
 .center {
 display: block;
