--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -167,7 +167,9 @@ width:100%;
     margin-top: 5px;
 }
 
-
+#short-descript {
+    max-width: 300px;
+}
 .center {
 display: block;
 margin-left: auto;
